<resources>
    <string name="app_name">Hire me!</string>
    <string name="edt_email">Email</string>
    <string name="edt_password">Password</string>
    <string name="changePassword">Change Password</string>
    <string name="forgot_password">Forget Password</string>
    <string name="signin">Sign In</string>
    <string name="signup">Register</string>
    <string name="edt_nama">Name</string>
    <string name="edt_fistname">First Name</string>
    <string name="edt_lastname">Last Name</string>
    <string name="edt_confrimpassword">Confirm Password</string>
    <string name="edt_dob">Date of Birth</string>
    <string name="edt_phone">Phone Number</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="recommended">Recommended</string>
    <string name="jobs">Jobs</string>
    <string name="events">Events</string>
    <string name="dont">Don\'t have an account?</string>
    <string name="nomor">+62</string>
    <string name="show">Show Password</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit Profile</string>
    <string name="portfolio">Portfolio</string>
    <string name="save">save</string>
    <string name="profileFoto">Profile photo</string>
    <string name="lastEducation">Last Education</string>
    <string name="location">Location</string>
    <string name="description">Description about yourself</string>
    <string name="upload">Upload</string>
    <string name="uploadYourFile">Upload your curriculum vitae (.pdf)</string>
    <string name="setRecommendation">Set Recommendation</string>
    <string name="category">Category</string>
    <string name="categoryOptional">Category (optional)</string>
    <string name="done">Done</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="searchKeyword">Search title, keyword or company</string>
    <string name="forgetWord1">Your email must be the same as the one</string>
    <string name="forgetWord2">you used to register yourself</string>
    <string name="sendReset">Send reset password</string>
    <string name="or">OR</string>
    <string name="minimumSalary">Minimum salary</string>
    <string name="viewFile">View CV</string>
    <string name="addPortfolio">Add portfolio</string>
    <string name="addButton">Add</string>
    <string name="title">Title</string>
    <string name="address">Address</string>
    <string name="descriptionText">Description</string>
    <string name="addList">Add list</string>
    <string name="editVacancy">Edit vacancy</string>
    <string name="applicantList">Applicant list</string>
    <string name="rating">Rating</string>
    <string name="applicantProfile">Applicant profile</string>
    <string name="call">Call</string>
    <string name="email">Email</string>
    <string name="premium">Premium</string>
    <string name="addBusiness">Add Business</string>
    <string name="editBusiness">Edit Business</string>
    <string name="businessPhoto">Business Photo</string>
    <string name="businessName">Business name</string>
    <string name="businessOverview">Business Overview</string>
    <string name="businessCenter">Business Center</string>
    <string name="logout">Logout</string>
    <string name="changeYourPassword">Change your password</string>
    <string name="newPassword">New password</string>
    <string name="oldPassword">Old password</string>
    <string name="list">List</string>
    <string name="viewRating">View Rating</string>
    <string name="addVacancy">Add Vacancy</string>
    <string name="listVacancy">List vacancy</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="favorite">Favorites</string>
    <string name="applicationHistory">Application history</string>
    <string name="rateCompany">Rate company</string>
    <string name="position">Position</string>
    <string name="dueDate">Due Date</string>
    <string name="listRating">List rating</string>
    <string name="dataNotFound">Data not found</string>
    <string name="detailVacancy">Detail vacancy</string>
    <string name="apply">Apply</string>
    <string name="FavoriteEmpty">Favorite is empty</string>
    <string name="callCustomerService">Call Customer Service</string>
    <string name="applicationEmpty">Application history is empty</string>
    <string name="image">Image :</string>
    <string name="imageGallery">Image gallery</string>
    <string name="delete">Delete</string>
    <string name="viewPortfolio">View portfolio</string>
    <string name="noPort">Portfolio is empty</string>
</resources>
