<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textSize="24dp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:gravity="center"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/edt_fistname"
                android:background="@drawable/edit_text_card"
                android:paddingHorizontal="10dp"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/edt_lastname"
                android:background="@drawable/edit_text_card"
                android:paddingHorizontal="10dp"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/edt_dob"
                android:background="@drawable/edit_text_card"
                android:paddingHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:inputType="date"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp"
                android:weightSum="2">

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/female" />
            </RadioGroup>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/edt_email"
                android:background="@drawable/edit_text_card"
                android:paddingHorizontal="10dp"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/edt_phone"
                android:background="@drawable/edit_text_card"
                android:paddingHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:inputType="phone"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/edt_password"
                android:background="@drawable/edit_text_card"
                android:paddingHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:inputType="textPassword"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/edt_confrimpassword"
                android:background="@drawable/edit_text_card"
                android:paddingHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:inputType="textPassword"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:background="@drawable/button_login_card"
                android:textColor="@color/colorWhite"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>