<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:background="@drawable/gradient_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="20sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginTop="10sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginBottom="10sp"
                android:gravity="center"/>

            <EditText
                android:id="@+id/et_firstName"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:hint="@string/edt_fistname"
                android:background="@drawable/edit_text_card"
                android:paddingHorizontal="10sp"
                android:layout_marginBottom="10sp"
                android:inputType="textCapWords"/>

            <EditText
                android:id="@+id/et_lastName"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:hint="@string/edt_lastname"
                android:background="@drawable/edit_text_card"
                android:paddingHorizontal="10sp"
                android:layout_marginBottom="10sp"
                android:inputType="textCapWords"/>

            <TextView
                android:id="@+id/tv_DOB"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:hint="@string/edt_dob"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:background="@drawable/edit_text_card"
                android:paddingHorizontal="10sp"
                android:layout_marginBottom="10sp"/>

            <RadioGroup
                android:id="@+id/rb_genderGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10sp"
                android:weightSum="2">

                <RadioButton
                    android:id="@+id/rb_male"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/male"
                    android:checked="true"
                    android:textSize="15sp"/>

                <RadioButton
                    android:id="@+id/rb_female"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/female"
                    android:textSize="15sp"/>
            </RadioGroup>

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:hint="@string/edt_email"
                android:background="@drawable/edit_text_card"
                android:paddingHorizontal="10sp"
                android:layout_marginBottom="10sp"
                android:singleLine="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10sp">

                <LinearLayout
                    android:layout_width="50sp"
                    android:layout_height="match_parent"
                    android:background="@drawable/edit_text_card"
                    android:layout_marginRight="10sp"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nomor"
                        android:textSize="18sp"
                        android:textStyle="bold"/>
                </LinearLayout>

                <EditText
                    android:id="@+id/et_phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:hint="@string/edt_phone"
                    android:background="@drawable/edit_text_card"
                    android:paddingHorizontal="10sp"
                    android:inputType="phone" />

            </LinearLayout>



            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:hint="@string/edt_password"
                android:background="@drawable/edit_text_card"
                android:paddingHorizontal="10sp"
                android:layout_marginBottom="10sp"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/et_confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:hint="@string/edt_confrimpassword"
                android:background="@drawable/edit_text_card"
                android:paddingHorizontal="10sp"
                android:layout_marginBottom="10sp"
                android:inputType="textPassword"/>

            <CheckBox
                android:id="@+id/cb_showPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show"
                android:paddingHorizontal="10sp"
                android:layout_marginBottom="10sp"/>

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:background="@drawable/button_login_card"
                android:textColor="@color/colorWhite"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="10sp"
                android:textSize="15sp"/>


        </LinearLayout>
    </LinearLayout>
</ScrollView>