<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPassword">

    <RelativeLayout
        android:id="@+id/action"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btn_close"
            android:layout_width="50sp"
            android:layout_height="50sp"
            app:srcCompat="@drawable/ic_close_white_24dp"
            android:layout_alignParentLeft="true"
            android:layout_marginVertical="5sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text= "@string/forgot_password"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:textColor="@color/colorWhite" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="20sp"
        android:layout_centerInParent="true">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgetWord1"
            android:textSize="15sp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgetWord2"
            android:textSize="15sp"
            android:textAlignment="center"
            android:layout_marginBottom="10sp"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginBottom="10sp"
            android:background="@drawable/edit_text_card"
            android:elevation="5sp"
            android:paddingHorizontal="10sp"
            android:hint="@string/edt_email"/>

        <Button
            android:id="@+id/btn_resetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sendReset"
            android:background="@drawable/button_login_card"
            android:textColor="@color/colorWhite"
            android:layout_marginBottom="10sp"
            android:textSize="18sp"/>
    </LinearLayout>

</RelativeLayout>