<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePassword">

    <RelativeLayout
        android:id="@+id/action"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btn_close"
            android:layout_width="50sp"
            android:layout_height="50sp"
            app:srcCompat="@drawable/ic_close_white_24dp"
            android:layout_alignParentLeft="true"
            android:layout_marginVertical="5sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text= "@string/changePassword"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="70sp"
            android:layout_height="match_parent"
            android:text="@string/save"
            android:background="@color/ColorTransparent"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/action"
        android:layout_marginHorizontal="10sp"
        android:layout_marginTop="10sp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/changeYourPassword"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginBottom="10sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/oldPassword"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_oldPassword"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginBottom="10sp"
            android:background="@drawable/edit_text_card"
            android:elevation="5sp"
            android:paddingHorizontal="10sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newPassword"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_newPassword"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginBottom="10sp"
            android:background="@drawable/edit_text_card"
            android:elevation="5sp"
            android:paddingHorizontal="10sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edt_confrimpassword"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginBottom="10sp"
            android:background="@drawable/edit_text_card"
            android:elevation="5sp"
            android:paddingHorizontal="10sp" />
    </LinearLayout>

</RelativeLayout>