<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddVacancy">

    <RelativeLayout
        android:id="@+id/action"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_add"
            android:layout_width="70sp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@color/ColorTransparent"
            android:text="@string/addButton"
            android:textColor="@color/colorWhite"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/btn_close"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:layout_alignParentLeft="true"
            android:layout_marginVertical="5sp"
            app:srcCompat="@drawable/ic_close_white_24dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/addVacancy"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />


    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/action">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginHorizontal="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/sp_kategori"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginBottom="10sp"
                android:background="@drawable/edit_text_card"
                android:elevation="5sp"
                android:paddingHorizontal="10sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/position"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/sp_position"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginBottom="10sp"
                android:background="@drawable/edit_text_card"
                android:elevation="5sp"
                android:paddingHorizontal="10sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginBottom="10sp"
                android:background="@drawable/edit_text_card"
                android:elevation="5sp"
                android:paddingHorizontal="10sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/sp_location"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginBottom="10sp"
                android:background="@drawable/edit_text_card"
                android:elevation="5sp"
                android:paddingHorizontal="10sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/minimumSalary"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_gaji"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginBottom="10sp"
                android:background="@drawable/edit_text_card"
                android:elevation="5sp"
                android:paddingHorizontal="10sp"
                android:inputType="number"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dueDate"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_dueDate"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:background="@drawable/edit_text_card"
                android:paddingHorizontal="10sp"
                android:layout_marginBottom="10sp"
                android:elevation="5sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descriptionText"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_deskripsi"
                android:layout_width="match_parent"
                android:layout_height="300sp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:background="@drawable/edit_text_card"
                android:elevation="5sp"
                android:paddingHorizontal="10sp"
                android:paddingVertical="10sp"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>